<resources>
<!--    main page-->
    <string name="app_name">User Profile</string>
    <string name="create_profile">Create Profile</string>
    <string name="user_settings">User Settings</string>
    <string name="view_profile">View Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="general_settings">General Settings</string>

<!--    create page-->
    <string name="create_page_title">"Please enter your details to create a profile"</string>
    <string name="required">"*required"</string>
    <string name="full_name">"Full Name*"</string>
    <string name="full_name_hint">"Enter your full name"</string>
    <string name="date_of_birth">"Date of Birth*"</string>
    <string name="date_of_birth_hint">"Enter your birthdate (mm/dd/yyyy)"</string>
    <string name="gender">"Gender*"</string>
    <string name="male">"Male"</string>
    <string name="female">"Female"</string>
    <string name="weight">"Weight*"</string>
    <string name="weight_hint">"Enter your weight (in kg or lbs)"</string>
    <string name="save_button">"Save"</string>

<!--    display page-->
    <string name="main_settings">"Main Settings"</string>
    <string name="edit_button">"Edit"</string>

<!--    general settings page-->
    <string name="unit_options">"Unit Options"</string>
    <string name="miles">"Miles"</string>
    <string name="kilometers">"Kilometers"</string>
    <string name="language_options">"Language Options"</string>
    <string name="voice_feedback_options">"Voice Feedback Options"</string>
    <string name="gps_freq">"GPS Frequency"</string>
    <string name="set_speech_rate">"Set Speech Rate"</string>
    <string name="set_pitch_rate">"Set Pitch Rate"</string>
    <string name="tts_hint">"Enter Text to Speak"</string>
    <string name="test_tts_button">"Test TTS"</string>

</resources>