<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createProfileHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_page_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/fullNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/full_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <EditText
        android:id="@+id/editFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/fullNameLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fullNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/fullNameLabel" />

    <TextView
        android:id="@+id/dateOfBirthLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/date_of_birth"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/editFullName" />

    <EditText
        android:id="@+id/editDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth_hint"
        android:inputType="date"
        android:focusable="false"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/fullNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirthLabel" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDOB" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/genderLabel"
        app:layout_constraintStart_toEndOf="@+id/genderLabel"
        app:layout_constraintTop_toBottomOf="@+id/editDOB"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:paddingRight="8dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/weight_hint"
        android:inputType="none"
        android:longClickable="false"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textIsSelectable="true"
        app:layout_constraintTop_toBottomOf="@+id/weightLabel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>