<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneralSettings">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createProfileHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_settings"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvLanguageOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/language_options"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguageOptions" />

    <TextView
        android:id="@+id/tvVoiceFeedBackOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/voice_feedback_options"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/languageSpinner" />

    <TextView
        android:id="@+id/tVSpeechRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/set_speech_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/tvVoiceFeedBackOptions" />

    <SeekBar
        android:id="@+id/sBSpeechRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tVSpeechRate"
        android:max="19"
        android:progress="9"
        app:layout_constraintEnd_toEndOf="@+id/tVSpeechRate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tVSpeechRate"
        app:layout_constraintTop_toBottomOf="@+id/tVSpeechRate" />

    <TextView
        android:id="@+id/tVPitchRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/set_pitch_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/sBSpeechRate" />

    <SeekBar
        android:id="@+id/sBPitchRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tVSpeechRate"
        android:max="19"
        android:progress="9"
        app:layout_constraintEnd_toEndOf="@+id/tVPitchRate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tVPitchRate"
        app:layout_constraintTop_toBottomOf="@+id/tVPitchRate" />


    <EditText
        android:id="@+id/eTTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sBPitchRate"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:hint="@string/tts_hint"
        app:layout_constraintEnd_toEndOf="@+id/tVPitchRate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tVPitchRate"
        app:layout_constraintTop_toBottomOf="@+id/tVPitchRate">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/test_tts_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTTest"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>